# cs2-gsi-events

./: .gitignore  Cargo.toml  Readme.md  gamestate_integration_events.cfg
.github/workflows/: rust.yml
src/: error.rs  lib.rs  state.rs
src/models/: map.rs  mod.rs  player.rs  provider.rs  round.rs
src/overlay/: events.rs  mod.rs
src/overlay/elements/: mod.rs  text.rs
src/overlay/linux/: mod.rs
src/overlay/windows/: mod.rs  utility.rs  window.rs
src/windows/: events.rs  mod.rs  utility.rs  window.rs
src/windows/elements/: mod.rs  text.rs
