[package]
name = "cs-gsi"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["full"] }
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
rodio = { version = "0.22.2", features = ["playback"] }

[target.'cfg(windows)'.dependencies]
windows-core = "0.62.2"
windows = { version = "0.62.2", features = [
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_Graphics_DirectComposition",
    "Win32_Foundation",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_DirectWrite"
] }